--- a/td_dl.ipynb
+++ b/td_dl.ipynb
@@ -817,7 +817,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 48,
       "source": [
         "# Obs.: Para executar esta célula somente é necessário declarar a classe e importar as libs acima.\r\n",
         "\r\n",
@@ -829,95 +829,43 @@
         "    TEXT = data.Field(tokenize = tokenize,\r\n",
         "                      include_lengths = True)\r\n",
         "\r\n",
-        "    #from torchtext.legacy import datasets\r\n",
-        "    #import random\r\n",
-        "    #LABEL = data.LabelField(dtype = torch.float)\r\n",
-        "    #SEED = 789\r\n",
-        "    #torch.manual_seed(SEED)\r\n",
-        "    #torch.backends.cudnn.deterministic = True    \r\n",
-        "    #train_data, test_data = datasets.IMDB.splits(TEXT, LABEL)\r\n",
-        "    #train_data, valid_data = train_data.split(random_state = random.seed(SEED))\r\n",
-        "    #MAX_VOCAB_SIZE = 30000\r\n",
-        "    #TEXT.build_vocab(train_data, max_size = MAX_VOCAB_SIZE)\r\n",
-        "    #print(TEXT)\r\n",
-        "    #print(TEXT.vocab)\r\n",
-        "    #torch.save(TEXT.vocab, \"vocab2_test.pt\")\r\n",
+        "    TEXT.vocab = torch.load(\"vocab2.pt\")\r\n",
         "\r\n",
-        "    #print(vars(list(train_data[0:10])))\r\n",
-        "\r\n",
-        "    #print(train_data[0:10].numpy())\r\n",
-        "\r\n",
-        "    \r\n",
-        "    #train_data.head()\r\n",
-        "\r\n",
-        "\r\n",
-        "\r\n",
-        "    TEXT.vocab = torch.load(\"vocab2_test.pt\")\r\n",
-        "    #print(\"Palavras únicas:\", len(TEXT.vocab))\r\n",
-        "    #print(\"20 palavras mais comuns:\", TEXT.vocab.freqs.most_common(20))\r\n",
-        "    #print(\"10 palavras do vocabulário de palavras para analisar estrutura:\", TEXT.vocab.itos[:10])\r\n",
-        "    \r\n",
-        "    #torch.backends.cudnn.deterministic = True\r\n",
-        "\r\n",
-        "    #torch.save(TEXT.vocab, \"vocab2.pt\")\r\n",
-        "\r\n",
-        "    INPUT_DIM = len(TEXT.vocab)\r\n",
-        "    EMBEDDING_DIM = 100\r\n",
-        "    HIDDEN_DIM = 256\r\n",
-        "    OUTPUT_DIM = 1\r\n",
-        "    N_LAYERS = 2\r\n",
-        "    BIDIRECTIONAL = True\r\n",
-        "    DROPOUT = 0.5\r\n",
-        "    PAD_IDX = TEXT.vocab.stoi[TEXT.pad_token]\r\n",
-        "\r\n",
-        "    # Cria o modelo com LSTM e hiperparâmetros\r\n",
-        "    model = MultiLayerRNN(INPUT_DIM, \r\n",
-        "                EMBEDDING_DIM, \r\n",
-        "                HIDDEN_DIM, \r\n",
-        "                OUTPUT_DIM, \r\n",
-        "                N_LAYERS, \r\n",
-        "                BIDIRECTIONAL, \r\n",
-        "                DROPOUT, \r\n",
-        "                PAD_IDX)    \r\n",
-        "    model.load_state_dict(torch.load('tf-model2.pt'))\r\n",
+        "    model = torch.load('tf-model2.ptf')\r\n",
         "    model.eval()\r\n",
         "\r\n",
         "    return model, TEXT\r\n",
         "\r\n",
-        "\r\n",
         "# Rotina independente de predição\r\n",
         "def predict(text : str):\r\n",
         "    # Isso poderia ser separado para performance\r\n",
-        "    model, TEXT = prepare_model()\r\n",
+        "    model_pred, TEXT = prepare_model()\r\n",
         "\r\n",
-        "    #tokens = TEXT.preprocess(text)\r\n",
-        "    #print(tokens)\r\n",
         "    texts, lengths = TEXT.process([text])\r\n",
-        "    #texts = TEXT.preprocess(text)\r\n",
-        "    #lengths = TEXT.numericalize(texts)\r\n",
-        "    #print(texts, lengths)\r\n",
         "    with torch.no_grad():\r\n",
-        "        preds = model(texts, lengths).squeeze(1)\r\n",
+        "        preds = model_pred(texts, lengths).squeeze(1)\r\n",
         "\r\n",
-        "    return torch.sigmoid(preds)\r\n",
+        "    return torch.sigmoid(preds).round()\r\n",
         "\r\n",
-        "tests = ['very good movie', 'not bad film', 'terrible acting', \r\n",
+        "tests = ['very good film', \r\n",
+        "    'not bad movie', \r\n",
+        "    'terrible acting', \r\n",
         "    \"One of the other reviewers has mentioned that after watching just 1 Oz episode you'll be hooked\",\r\n",
         "    \"A wonderful little production\"]\r\n",
         "for t in tests:\r\n",
         "    s = predict(t)\r\n",
-        "    print('Teste:', t, 'POS' if s.round() else 'NEG', '[', s, ']')\r\n"
+        "    print('Teste:', t, '[POS]' if s else '[NEG]')\r\n"
       ],
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Teste: very good movie NEG [ tensor([0.3318]) ]\n",
-            "Teste: not bad film NEG [ tensor([0.3423]) ]\n",
-            "Teste: terrible acting NEG [ tensor([0.3543]) ]\n",
-            "Teste: One of the other reviewers has mentioned that after watching just 1 Oz episode you'll be hooked NEG [ tensor([0.2417]) ]\n",
-            "Teste: A wonderful little production NEG [ tensor([0.2922]) ]\n"
+            "Teste: very good film [POS]\n",
+            "Teste: not bad movie [POS]\n",
+            "Teste: terrible acting [NEG]\n",
+            "Teste: One of the other reviewers has mentioned that after watching just 1 Oz episode you'll be hooked [NEG]\n",
+            "Teste: A wonderful little production [NEG]\n"
           ]
         }
       ],
